Setting up home page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,98 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hideBackButton="true" color="danger">
+    <!--<button menuToggle >
+      <ion-icon color="danger" name="menu"></ion-icon>
+    </button>-->
+    <!--<ion-buttons color="danger" start>
+      <button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>-->
+    <button ion-button menuToggle start>
+        <ion-icon name="ios-menu-outline"></ion-icon>
+    </button>
+    
     <ion-title>Home</ion-title>
+
+    <ion-buttons end>
+        <button ion-button icon-only (click)="shareApp()">
+            <ion-icon name="share"></ion-icon>
+        </button>
+        
+    </ion-buttons>
   </ion-navbar>
+
+
+
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content class="cards-bg icons-basic-page home " >
+
+
+  <ion-card>
+
+    <!--<ion-item>-->
+      <!--<ion-avatar item-left>-->
+        <!--<img src="img/234radio.jpg">-->
+      <!--</ion-avatar>-->
+      <!--&lt;!&ndash;<h2>Marty McFly</h2>&ndash;&gt;-->
+      <!--&lt;!&ndash;<p>November 5, 1955</p>&ndash;&gt;-->
+    <!--</ion-item>-->
+
+    <img src="img/234radio.jpg"/>
+    <ion-card-content>
+      <h2 class="card-title" color="danger">
+        234Radio Live!!!
+      </h2>
+      <p color="danger">
+        Get unlimited access to unparalleled programmes and news on the radio, access our social media platforms and be our reporter via iWitness.
+
+      </p>
+      </ion-card-content>
+
+     <ion-slides [options]="mySlideOptions" (ionWillChange)="onSlideChangeStart($event)">
+    <ion-slide>
+      <img src="img/atittude.jpg" class="slide-image"/>
+    </ion-slide>
+    <ion-slide>
+      <img src="img/dance.jpg" class="slide-image"/>
+
+    </ion-slide>
+    <ion-slide>
+      <img src="img/mic.jpg" class="slide-image"/>
+
+    </ion-slide>
+    <ion-slide>
+      <img src="img/music.jpg" class="slide-image"/>
+    </ion-slide>
+  </ion-slides>
+
+      <ion-row>
+        <ion-col width-50><ion-icon (click)="Toggle()" name="{{playState}}" color="fb"></ion-icon><p color="fb">Listen Live</p></ion-col>
+        <!--<ion-col width-50><ion-icon (click)="Toggle()" name="{{playState}}" color="fb"><p color="fb">Listen Live</p><audio  src="http://streaming.radio.co/s7f3695a64/listen" id="toggle" autoplay="false" ></audio></ion-icon></ion-col>-->
+        <ion-col width-50><ion-icon (click)="gotoReport()" ios="ios-recording" md="md-recording" color="danger"><p color="danger">iWitness</p></ion-icon></ion-col>
+        <ion-col width-50><ion-icon (click)="gotoContact()" ios="ios-mail" md="md-mail"  color="secondary"></ion-icon><p color="secondary">Contact Us</p></ion-col>
+        <ion-col width-50><ion-icon (click)="gotoPrograms()" ios="ios-list-box" md="md-list-box" color="favorite"></ion-icon><p color="favorite">Programme Schedule</p></ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col width-50><ion-icon (click)="makeCall('tel:+2348035814545')" ios="ios-call" md="md-call" color="favorite"><p color="favorite">Call Us</p></ion-icon></ion-col>
+        <ion-col width-50><ion-icon (click)="openFacebook()" ios="logo-facebook" md="logo-facebook" color="fb"></ion-icon><p color="fb">Facebook</p></ion-col>
+        <ion-col width-50><ion-icon (click)="openTwitter()" ios="logo-twitter" md="logo-twitter" color="tweet"></ion-icon><p color="tweet">Twitter</p></ion-col>
+        <ion-col width-50><ion-icon (click)="openWeb()" ios="ios-link" md="md-link"  color="dark"></ion-icon><p color="dark">Website</p></ion-col>
+      </ion-row>
+
+    <!--</ion-grid>-->
+
+
+  </ion-card>
+
+
+
 </ion-content>
+
+<style>
+  .social-cards ion-col {
+    padding: 0;
+  }
+</style>
